// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`world-v2 addEntities add belt 1`] = `
{
  "derived": {
    "beltPaths": [],
    "nextEntityId": 0,
    "tiles": {},
  },
  "origin": {
    "entities": {
      "0": {
        "id": "0",
        "items": [],
        "offset": 0,
        "position": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
    },
  },
}
`;

exports[`world-v2 addEntities empty 1`] = `
{
  "derived": {
    "beltPaths": [],
    "nextEntityId": 0,
    "tiles": {},
  },
  "origin": {
    "entities": {},
  },
}
`;

exports[`world-v2 addEntities replace belt 1`] = `
{
  "derived": {
    "beltPaths": [],
    "nextEntityId": 0,
    "tiles": {},
  },
  "origin": {
    "entities": {
      "0": {
        "id": "0",
        "items": [],
        "offset": 0,
        "position": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
    },
  },
}
`;

exports[`world-v2 initWorld new world 1`] = `
{
  "derived": {
    "beltPaths": [],
    "nextEntityId": 0,
    "tiles": {},
  },
  "origin": {
    "entities": {},
  },
}
`;
